--- a/themes/frontend/default/style.css
+++ b/themes/frontend/default/style.css
@@ -1,3 +1,12 @@
+/* -= General area styles */
+.cuar_page_title small {
+	display: block;
+	float: right;
+	font-weight: normal;
+	font-size: 0.45em;
+	line-height: 4em;
+}
+
 /* -= File links */
 .cuar-private-file .view-link a, .cuar-private-file .download-link a {
 	background: url('images/icons.png') top left no-repeat;
@@ -104,4 +113,49 @@
 /* -= File after post */
 .cuar-private-file-container {
 	margin-top: 4em;
+}
+
+/* -= Forms */
+.cuar_form {
+	margin: 2em 0;
+}
+
+.cuar_form .login-links {
+	margin-top: 4em;
+	font-size: 0.9em;	
+	text-align: center;
+}
+
+.cuar_form p.error, .cuar_form p.notice {
+	padding: 1em;
+	margin: 2em 0;
+}
+
+.cuar_form p.error {
+	background: #F7D0D0;
+	color: #8D1818;
+}
+
+.cuar_form p.notice {
+	background: #EFF7CF;
+	color: #758D17;
+}
+
+.cuar_form_row {
+	display: table;
+	width: 100%;
+}
+.cuar_form_row>label {
+	display: table-cell;
+	width: 30%;
+}
+
+.cuar_form_row>span {
+	display: table-cell;
+	min-width: 30%;
+}
+
+.cuar_form_row span.hint {
+	font-size: 0.9em;
+	opacity: 0.6;
 }
