--- a/themes/admin/default/style.css
+++ b/themes/admin/default/style.css
@@ -26,6 +26,10 @@ span.label {
 .cuar-sidebox {
 	border-bottom: 5px solid #eee;
 	margin-bottom: 20px;
+	
+	-webkit-box-sizing: border-box;
+	   -moz-box-sizing: border-box; 
+	        box-sizing: border-box;
 }
 
 .cuar-sidebox ul {
@@ -48,8 +52,12 @@ span.label {
 /* -= ADD-ONS TAB */
 
 .cuar-addon {
+	-webkit-box-sizing: border-box;
+	   -moz-box-sizing: border-box; 
+	        box-sizing: border-box;
+	        
 	float: left;
-	width: 22%;
+	width: 23%;
 	margin: 1%;
 	padding: 10px;
 	border: 1px solid #eee;
@@ -66,6 +74,7 @@ span.label {
 
 .cuar-addon h2 {
 	text-align: center;
+	text-decoration: none;
 }
 
 /* -= INDIVIDUAL SETTINGS TAB ADJUSTMENTS */
