--- a/themes/admin/default/style.css
+++ b/themes/admin/default/style.css
@@ -21,6 +21,40 @@ span.label {
 	margin-top: 35px;
 }
 
+/* -= ADMIN MENU & ICONS */
+
+#toplevel_page_customer-area .wp-menu-image {
+    background: url( 'images/ic_admin_menu.png' ) no-repeat 6px 7px !important;
+}
+#toplevel_page_customer-area:hover .wp-menu-image {
+	background-position:6px -17px !important;
+}
+#toplevel_page_customer-area.wp-has-current-submenu .wp-menu-image {
+	background-position:6px -39px !important;
+}
+
+#icon-customer-area.icon32 {
+    background: url( 'images/ic_logo_32.png' ) no-repeat center !important;
+}
+
+#icon-customer-area.icon32.icon32-posts-cuar_private_file {
+    background: url( 'images/ic_private_file_32.png' ) no-repeat center !important;
+}
+
+#icon-icon32-settings.icon32 {
+    background: url( 'images/ic_settings_32.png' ) no-repeat center !important;
+}
+
+.dashboard-logo {
+	max-width: 80%;
+	margin: 0 auto 50px;
+}
+
+.dashboard-logo img {
+	max-width: 100%;
+	height: auto; 
+}
+
 /* -= SETTINGS SIDEBOXES */
 
 .cuar-sidebox {
