--- a/themes/admin/default/style.css
+++ b/themes/admin/default/style.css
@@ -121,6 +121,6 @@ span.label {
 
 /* -= INDIVIDUAL SETTINGS TAB ADJUSTMENTS */
 
-.cuar-settings-cuar_addons p.submit {
+.cuar-settings-cuar_addons p.submit, .cuar-settings-cuar_troubleshooting p.submit {
 	display: none;
 }
