--- a/themes/admin/default/style.css
+++ b/themes/admin/default/style.css
@@ -133,3 +133,53 @@ span.label {
 .cuar-settings-cuar_addons p.submit, .cuar-settings-cuar_troubleshooting p.submit {
 	display: none;
 }
+
+.cuar-main.cuar-settings .form-table {
+	margin: 1em 0;	
+}
+
+/* -= TABS */
+
+.tab-container .tab-wrapper {
+	border-bottom: 1px solid #ccc;
+	padding: 0;
+	margin: 0;
+}
+
+.tab-container .nav-tab {
+	display: inline-block;
+	
+	padding: 4px 14px 6px;
+	margin: 0 6px -1px 0;
+	
+	font-weight: 200;
+	text-shadow: #fff 0 1px 0;
+	text-decoration: none;
+	font-size: 14px;
+	line-height: 16px;
+	
+	color: #aaa;
+	border-color: #dfdfdf #dfdfdf #fff;
+	border-style: solid;
+	border-width: 1px 1px 0;
+	-webkit-border-top-left-radius: 3px;
+	   	    border-top-left-radius: 3px;
+	-webkit-border-top-right-radius: 3px;
+			border-top-right-radius: 3px;
+}
+
+.tab-container .ui-tabs-nav a {
+	outline: 0;
+	text-decoration: none;
+	color: #aaa;
+}
+
+.tab-container .ui-state-active {
+	border-color: #acacac #acacac #fff;
+}
+
+.tab-container .ui-state-active a {
+	outline: 0;
+	font-weight: 600;
+	color: #333;
+}
