--- a/themes/frontend/default/style.css
+++ b/themes/frontend/default/style.css
@@ -14,59 +14,48 @@
 /* -= Customer Area actions */
 
 .cuar-header {
-	position: relative;
 }
 
 .cuar-menu {
-	position: absolute;
-	top: 0;
-	right: 0;
-}
-
-.cuar-menu-button {
-	display: block;
-	float: right;
-	background: #E6402A;
-	font-weight: bold;
-	color: white;
-	width: 36px;
-	height: 36px;
-	line-height: 36px;
-	-webkit-border-radius: 18px;
-       -moz-border-radius: 18px;
-            border-radius: 18px;
-	text-align: center;
 }
 
 .cuar-actions-container {
-	position: absolute;
-	top: 36px;
-	right: 0;
 	list-style-type: none;
-	margin: 0 0 0 0;
+	margin: 0;
 	padding: 0;
-	background: #fafafa;
-	min-width: 200px;
 }
 
 .cuar-actions-container li {
-	display: block;
+	display: inline-block;
+	color: #ccc;
 }
 
 .cuar-actions-container li a {
-	display: block;
-	margin: 0;
-	padding: 0.8em 1em;
+	padding: 0 0 0.4em 0;
+	margin: 0.4em 1em;
 	width: 100%;
 	height: 100%;
 	text-transform: uppercase;
-	font-size: 0.9em;
+	font-size: 0.8em;
+	border-bottom: 2px solid #ffffff;
+	color: #E6402A;
+}
+
+.cuar-actions-container li:first-child a {
+	margin-left: 0;
+}
+
+.cuar-actions-container li.current a, .cuar-actions-container li.current-parent a {
+	border-bottom: 2px solid #E6402A;
+}
+
+.cuar-actions-container li:hover a {
+	border-bottom: 2px solid #E6402A;
 }
 
 .cuar-actions-container li a:hover {
-	color: white;
+	color: #E6402A;
 	text-decoration: none;
-	background: #E6402A;
 }
 
 /* -= File links */
@@ -106,23 +95,23 @@
 }
 
 /* -= File list */
-.cuar-private-file-container h4 {
+h4.cuar-private-file-section {
 	margin: 20px 0;
 	border-bottom: 1px solid #eee;
 	opacity: 0.5;
 }
 
-.cuar-private-file-container h4:hover {
+h4.cuar-private-file-section:hover {
 	background: #fafafa;
 	cursor: pointer;
 	opacity: 1;
 }
 
-.cuar-private-file-container h4.ui-accordion-header-active {
+h4.cuar-private-file-section.ui-accordion-header-active {
 	opacity: 1;
 }
 
-.cuar-private-file-list {
+.cuar-item-list {
 	width: 100%;
 	margin: 0;
 	padding: 0;
@@ -130,30 +119,29 @@
 	border-spacing: 0;
 }
 
-.cuar-private-file-list,
-.cuar-private-file-list tr,
-.cuar-private-file-list td {
-	border: none;
+.cuar-item-list,
+.cuar-item-list tr,
+.cuar-item-list td {
 	min-height: 40px;
 }
 
-.cuar-private-file-list td a,
-.cuar-private-file-list td a:hover,
-.cuar-private-file-list td a:visited {
+.cuar-item-list td a,
+.cuar-item-list td a:hover,
+.cuar-item-list td a:visited {
 	text-decoration: none;
 	vertical-align: middle;
 }
 	
-.cuar-private-file-list .date {
+.cuar-item-list .date {
 	width: 25%;
 	vertical-align: middle;
 }
 
-.cuar-private-file-list .title {
+.cuar-item-list .title {
 	width: 100%;
 }
 
-.cuar-private-file-list .title a {
+.cuar-item-list .title a {
 	display: inline-block;
 	width: 100%;
 	height: 100%;
@@ -167,7 +155,7 @@
 .cuar-private-file-list .cuar-private-file {
 }
 
-.cuar-private-file-list .cuar-private-file:hover {
+.cuar-item-list tr:hover {
 	background: #fafafa;
 	cursor: pointer;
 }
@@ -210,11 +198,13 @@
 .cuar_form_row>label {
 	display: table-cell;
 	width: 30%;
+	vertical-align: top;
 }
 
 .cuar_form_row>span {
 	display: table-cell;
 	min-width: 30%;
+	vertical-align: top;
 }
 
 .cuar_form_row span.hint {
@@ -225,9 +215,43 @@
 .cuar_form_create_content .cuar_form_row>span input,
 .cuar_form_create_content .cuar_form_row>span textarea {
 	width: 100%;
+	margin-bottom: 12px;
 }
 .cuar_form_create_content .cuar_form_row>span select {
 	min-width: 50%;	
+	margin-bottom: 12px;
+}
+
+.cuar_small_button, .entry-content .cuar_small_button {
+	background: #e05d22; /* Old browsers */
+	background: -webkit-linear-gradient(top, #e05d22 0%, #d94412 100%); /* Chrome 10+, Safari 5.1+ */
+	background:   linear-gradient(to bottom, #e05d22 0%, #d94412 100%); /* W3C */
+	border: none;
+	border-bottom: 1px solid #b93207;
+	border-radius: 2px;
+	color: #fff;
+	display: inline-block;
+	padding: 6px 12px 5px;
+	text-decoration: none;
+	font-size: 0.9em;
+}
+
+.cuar_small_button:hover, .cuar_small_button:focus, .entry-content .cuar_small_button:hover, .entry-content .cuar_small_button:focus {
+	color: #fff;
+	background: #ed6a31; /* Old browsers */
+	background: -webkit-linear-gradient(top, #ed6a31 0%, #e55627 100%); /* Chrome 10+, Safari 5.1+ */
+	background:   linear-gradient(to bottom, #ed6a31 0%, #e55627 100%); /* W3C */
+	outline: none;
+}
+
+.cuar_small_button:active, .entry-content .cuar_small_button:active {
+	color: #fff;
+	background: #d94412; /* Old browsers */
+	background: -webkit-linear-gradient(top, #d94412 0%, #e05d22 100%); /* Chrome 10+, Safari 5.1+ */
+	background:   linear-gradient(to bottom, #d94412 0%, #e05d22 100%); /* W3C */
+	border: none;
+	border-top: 1px solid #b93207;
+	padding: 5px 12px 6px;
 }
 
 /* -= Messenger */
