* Add link to main Customer Area page (Dashboard) in the menu * Added more details to the list of files and pages
git-svn-id: https://plugins.svn.wordpress.org/customer-area/trunk@789986 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/themes/frontend/default/style.css
+++ b/themes/frontend/default/style.css
@@ -160,6 +160,20 @@ h4.cuar-private-file-section.ui-accordion-header-active {
 	cursor: pointer;
 }
 
+.cuar-item {	
+}
+
+.cuar-item {	
+}
+
+.cuar-item .links {
+	width: 15%;
+}
+
+.cuar-item .meta {
+	width: 33%;
+}
+
 /* -= File after post */
 .cuar-private-file-container {
 	margin-top: 4em;
@@ -266,10 +280,6 @@ h4.cuar-private-file-section.ui-accordion-header-active {
 
 .cuar_conversation .entry-meta em, .cuar_conv_reply .entry-meta em {
 	color: #333;
-}
-
-.cuar-conversation-list .meta {
-	width: 33%;
 }
 
 .cuar-conversation-list .updated {
