* Show more information about private files and private pages in single post views
git-svn-id: https://plugins.svn.wordpress.org/customer-area/trunk@790353 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/themes/frontend/default/style.css
+++ b/themes/frontend/default/style.css
@@ -103,6 +103,11 @@ table.entry-meta td {
 	background-position: 0px -19px;
 }
 
+.private-content-information {
+	font-size: 0.9em;
+	opacity: 0.9;
+}
+
 /* -= File list */
 h4.cuar-private-file-section {
 	margin: 20px 0;
