--- a/themes/admin/default/style.css
+++ b/themes/admin/default/style.css
@@ -108,7 +108,7 @@ span.label {
 	        box-sizing: border-box;
 	        
 	float: left;
-	width: 23%;
+	width: 48%;
 	margin: 1%;
 	padding: 10px;
 	border: 1px solid #eee;
@@ -120,12 +120,28 @@ span.label {
 }
 
 .cuar-addon img {
-	max-width: 100%;
+	max-width: 33%;
+	float: left;
 }
 
 .cuar-addon h2 {
 	text-align: center;
 	text-decoration: none;
+	font-size: 19px;
+}
+
+p.forcelinebreak {
+	display: block;
+	height: 10px;
+	width: 100%;
+	clear: both;
+	margin: 0;
+	padding: 0;
+}
+
+.cuar-addon .meta {
+	margin-left: 35%;
+	padding: 0 10px;
 }
 
 /* -= INDIVIDUAL SETTINGS TAB ADJUSTMENTS */
