--- a/themes/frontend/default/style.css
+++ b/themes/frontend/default/style.css
@@ -19,6 +19,34 @@ table.entry-meta td {
 	border: none;
 }
 
+.cuar-section-container {
+	padding: 0;
+	border: none;
+}
+
+h4.cuar-section {
+	border-top: none;
+	text-transform: uppercase;
+	background: #ededed;
+	text-align: center;
+	min-height: 40px;
+	line-height: 40px;
+	margin: 0;
+	opacity: 0.5;
+	outline: none;
+	
+}
+
+h4.cuar-section:hover {
+	background: #fafafa;
+	cursor: pointer;
+	opacity: 1;
+}
+
+h4.cuar-section.ui-accordion-header-active {
+	opacity: 1;
+	outline: none;
+}
 
 /* -= Customer Area actions */
 
@@ -114,9 +142,16 @@ table.entry-meta td {
 
 /* -= File list */
 h4.cuar-private-file-section {
-	margin: 20px 0;
-	border-bottom: 1px solid #eee;
+	border-top: none;
+	text-transform: uppercase;
+	background: #ededed;
+	text-align: center;
+	min-height: 40px;
+	line-height: 40px;
+	margin: 0;
 	opacity: 0.5;
+	outline: none;
+	
 }
 
 h4.cuar-private-file-section:hover {
@@ -127,6 +162,7 @@ h4.cuar-private-file-section:hover {
 
 h4.cuar-private-file-section.ui-accordion-header-active {
 	opacity: 1;
+	outline: none;
 }
 
 .cuar-item-list {
@@ -307,13 +343,6 @@ h4.cuar-private-file-section.ui-accordion-header-active {
 }
 
 .cuar-conversation-list .updated {
-}
-
-.cuar-conversation-list .cuar-section td {
-	border-top: none;
-	text-transform: uppercase;
-	background: #ededed;
-	text-align: center;
 }
 
 .cuar-conversation-list .date {
