--- a/themes/admin/default/style.css
+++ b/themes/admin/default/style.css
@@ -168,6 +168,13 @@ p.forcelinebreak {
 	padding: 0 10px;
 }
 
+@media only screen and (max-width: 900px) {
+	.cuar-addon {
+		float: left;
+		width: 98%;
+	}
+}
+
 /* -= INDIVIDUAL SETTINGS TAB ADJUSTMENTS */
 
 .cuar-settings-cuar_addons p.submit, .cuar-settings-cuar_troubleshooting p.submit {
@@ -224,18 +231,39 @@ p.forcelinebreak {
 	color: #333;
 }
 
-.cuar-settings p, .cuar-settings h2, .cuar-settings h3, .cuar-settings h4,
-.cuar-wizard p, .cuar-wizard h1, .cuar-wizard h2, .cuar-wizard h3, .cuar-wizard h4 {
+.cuar-settings p, .cuar-settings h2, .cuar-settings h3, .cuar-settings h4 {
 	line-height: 1.6em;
 	max-width: 600px;
 }
 
-.cuar-wizard ul, .cuar-settings ul:not(.tab-wrapper) {
+.cuar-settings ul:not(.tab-wrapper) {
 	list-style-type: disc;
 	padding-left: 2em;
 	max-width: 600px;
 }
 
 .cuar-wizard ul li {
-	
+}
+
+.cuar-wizard .cuar-block {
+	padding: 30px 10px;
+	background: #eee;
+}
+
+.cuar-wizard .cuar-block h1 {
+	text-transform: uppercase;
+	text-align: center;
+	color: #fff;
+	font-weight: normal;
+}
+
+.cuar-wizard .cuar-block p, .cuar-wizard .cuar-block ul, .cuar-wizard .cuar-block h1, .cuar-wizard .cuar-block div {
+	margin: 20px auto;
+	max-width: 600px;	
+}
+
+.cuar-wizard .cuar-block ul {
+	list-style-type: disc;
+	padding-left: 40px;
+	line-height: 1.5em;
 }
