--- a/themes/admin/default/style.css
+++ b/themes/admin/default/style.css
@@ -48,6 +48,19 @@ span.label {
 	margin-top: 35px;
 }
 
+.cuar-main-half {
+	width: 34%;
+	float: left;
+	margin-top: 35px;
+}
+
+.cuar-main-half-2 {
+	width: 34%;
+	margin-left: 2%;
+	float: left;
+	margin-top: 35px;
+}
+
 .cuar-side {
 	width: 29%;
 	float: right;
