--- a/themes/frontend/default-v4/less/_nav_menu.less
+++ b/themes/frontend/default-v4/less/_nav_menu.less
@@ -1,5 +1,15 @@
-.cuar-menu-container {
+body.customer-area .cuar-menu-container {
 		margin-bottom: 15px;
+	nav {
+			overflow: visible;
+		ul {
+				margin: 0;
+				list-style-type: none;
+			li {
+					margin: 0;
+			}
+		}
+	}
 }
 
 .cuar-child-pages-menu {
