--- a/themes/frontend/default-v4/less/_nav_menu.less
+++ b/themes/frontend/default-v4/less/_nav_menu.less
@@ -1,7 +1,7 @@
-body.customer-area .cuar-menu-container {
+.cuar-menu-container {
 		margin-bottom: 15px;
 	nav {
-			overflow: visible;
+			overflow: visible !important;
 		ul {
 				margin: 0;
 				list-style-type: none;
