--- a/themes/frontend/default-v4/less/_forms.less
+++ b/themes/frontend/default-v4/less/_forms.less
@@ -11,7 +11,7 @@
 .cuar-form {
 		.form-horizontal;
 	.control-label {
-			margin-bottom: 10px;
+			margin-bottom: 15px;
 			.make-sm-column(4);
 	}
 	.control-container {
@@ -20,6 +20,32 @@
 	.submit-container, .checkbox-container {
 			.make-sm-column(6);
   			.make-sm-column-offset(4);
+	}
+	img.captcha {
+			.center-block;
+			margin-bottom: 10px;
+	}
+}
+
+.cuar-big-form {
+	.form-group {
+			// .make-sm-column(12);
+	}
+	.two-columns {
+			.make-row();	
+		.half-width {
+				.make-sm-column(6);
+				margin-bottom: 15px;
+		}
+	}
+	.control-label {
+			.make-sm-column(4);
+	}
+	.control-container {
+			.make-sm-column(8);
+	}
+	.submit-container, .checkbox-container {
+			.make-sm-column(12);
 	}
 	img.captcha {
 			.center-block;
