--- a/themes/frontend/default-v4/less/_forms.less
+++ b/themes/frontend/default-v4/less/_forms.less
@@ -25,6 +25,13 @@
 			.center-block;
 			margin-bottom: 10px;
 	}
+	
+	legend {
+			font-weight: bold;
+			border-bottom: 1px solid #eee;
+			padding-bottom: 15px;
+			margin-bottom: 30px;
+	}
 }
 
 .cuar-big-form {
