--- a/themes/frontend/default-v4/less/_forms.less
+++ b/themes/frontend/default-v4/less/_forms.less
@@ -75,7 +75,7 @@
 	}
 }
 
-.cuar-create-content-form {
+.cuar-form {
 	#cuar_owner_type {
 			margin-bottom: 10px;
 	}
@@ -85,5 +85,15 @@
 	}
 	
 	.select2-container-multi .select2-choices .select2-search-choice {
+	}
+}
+
+.cuar-form {
+	.wp-editor-wrap{
+		border: 1px solid @item-border-color;
+		border-radius: @border-radius-base;
+	}
+	.wp-editor-container{
+		overflow:hidden;
 	}
 }
