* Fix: admin styles for the Tasks add-on
git-svn-id: https://plugins.svn.wordpress.org/customer-area/trunk@938037 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/themes/admin/default-wp38/style.css
+++ b/themes/admin/default-wp38/style.css
@@ -60,6 +60,18 @@ a.cuar-round-button:hover {
 	color: #fff;
 }
 
+.clearfix:before,
+.clearfix:after {
+  content:"";
+  display:table;
+}
+.clearfix:after {
+  clear:both;
+}
+.clearfix {
+  zoom:1; /* For IE 6/7 (trigger hasLayout) */
+}
+
 /* -= Status */
 
 .cuar-congrats {
@@ -528,6 +540,10 @@ input.knob {
 }
 
 /* -= Tasks */
+
+#ui-datepicker-div { 
+	display: none; 
+}
 
 .cuar-tasks {
 	margin-top: 15px;
