--- a/themes/admin/default-wp38/style.css
+++ b/themes/admin/default-wp38/style.css
@@ -553,6 +553,11 @@ input.knob {
 	background: #999;
 }
 
+.cuar-tasks.cuar-empty-list {
+	background: transparent;
+	border: none;
+}
+
 .cuar-task {
 	border-bottom: 1px solid #e5e5e5;
 }
