--- a/themes/frontend/default-v4/less/_general.less
+++ b/themes/frontend/default-v4/less/_general.less
@@ -146,6 +146,10 @@
 		}
 		.cuar-page-sidebar {
 				.make-md-column(4);
+		
+			@media (max-width: @screen-sm-max) {
+				clear:left;
+			}
 		}
 	}
 }
