--- a/themes/frontend/default-v4/less/_items.less
+++ b/themes/frontend/default-v4/less/_items.less
@@ -11,6 +11,10 @@
 	.cuar-item-wide {
 			.make-sm-column(12);
 	}
+		
+	.cuar-item-fullwidth {
+			.make-sm-column(12);
+	}
 }
 
 .cuar-page-without-sidebar .cuar-item-list {
@@ -109,7 +113,8 @@
 	}
 }
 
-.cuar-item.cuar-item-wide {
+.cuar-item.cuar-item-wide,
+.cuar-item.cuar-item-fullwidth {
 	
 	.panel {
 			border-left: 0 solid transparent;
