--- a/themes/frontend/default-v4/less/_tasks.less
+++ b/themes/frontend/default-v4/less/_tasks.less
@@ -50,3 +50,75 @@
 		}
 	}
 }
+
+// Add a task with AJAX
+// --------------------------------------------------
+
+.cuar-tasklist-task-list {
+	.cuar-task.cuar-task-editable {
+		.panel, .panel:hover {
+			padding: 0;
+		}
+		
+		.cuar-header {
+				position: relative;
+				padding: 15px;
+			.cuar-title {
+			}
+			.cuar-actions {
+					position: absolute;
+					right: 15px;		
+					top: 15px;
+			}
+		}
+		
+		.cuar-content {
+				padding: 15px;
+				border-top: 1px solid #ddd;
+				border-right: 1px solid #ddd;
+				background: #fafafa;
+				
+			.cuar-left {
+					float: left; 
+					width: 60%;				
+			}
+			.cuar-right {
+					float: left; 
+					width: 35%;		
+					margin-left: 4%;				
+			}
+		}
+		
+		.cuar-check-task {
+				margin: 10px;
+		}
+		
+		.btn-update-task {
+			margin-top: 15px;
+		}
+		
+		.cuar-round-button {	
+				display: inline-block;
+				.square(26px);		
+				.img-rounded;
+				margin-left: 5px;
+				color: #333;
+				background: #efefef;
+				padding: 3px;
+			&:hover {
+				background: #d0d0d0;
+			}
+		}
+	}
+}
+
+.cuar-form.cuar-add-task-form {
+	.control-container {
+			width: 100%;
+			margin: 0;
+	}
+	
+	.save-task {
+		margin-top: 45px;
+	}
+} 
